; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-manager.c_manager_set_hostname.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-manager.c_manager_set_hostname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [33 x i8] c"Setting transient hostname: '%s'\00", align 1
@.str.1 = private unnamed_addr constant [53 x i8] c"Not connected to system bus, setting hostname later.\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"org.freedesktop.hostname1\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"/org/freedesktop/hostname1\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"SetHostname\00", align 1
@set_hostname_handler = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [3 x i8] c"sb\00", align 1
@.str.6 = private unnamed_addr constant [37 x i8] c"Could not set transient hostname: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @manager_set_hostname(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @strna(i8* %7)
  %9 = call i32 (i8*, ...) @log_debug(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load i8*, i8** %5, align 8
  %13 = call i64 @free_and_strdup(i32* %11, i8* %12)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 (...) @log_oom()
  store i32 %16, i32* %3, align 4
  br label %44

17:                                               ; preds = %2
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %17
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @sd_bus_is_ready(i32 %25)
  %27 = icmp sle i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %22, %17
  %29 = call i32 (i8*, ...) @log_debug(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %44

30:                                               ; preds = %22
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @set_hostname_handler, align 4
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @sd_bus_call_method_async(i32 %33, i32* null, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i32 %34, %struct.TYPE_4__* %35, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.5, i64 0, i64 0), i8* %36, i32 0)
  store i32 %37, i32* %6, align 4
  %38 = load i32, i32* %6, align 4
  %39 = icmp slt i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %30
  %41 = load i32, i32* %6, align 4
  %42 = call i32 @log_error_errno(i32 %41, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.6, i64 0, i64 0))
  store i32 %42, i32* %3, align 4
  br label %44

43:                                               ; preds = %30
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %43, %40, %28, %15
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @log_debug(i8*, ...) #1

declare dso_local i32 @strna(i8*) #1

declare dso_local i64 @free_and_strdup(i32*, i8*) #1

declare dso_local i32 @log_oom(...) #1

declare dso_local i64 @sd_bus_is_ready(i32) #1

declare dso_local i32 @sd_bus_call_method_async(i32, i32*, i8*, i8*, i8*, i8*, i32, %struct.TYPE_4__*, i8*, i8*, i32) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
